examples/test/testpolicy15358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15358
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key15: value29
      key49: value21
      key6: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value14
      podSelector:
        matchLabels:
          key28: value48
          key40: value46
          key0: value25
